[package]
edition = "2021"
name = "quadtree-over-media"
version = "2.0.0-0.2"
description = """
Calculate and draw quadtrees over images in various formats
"""
#documentation =
license = "Apache-2.0"
repository = "https://github.com/JacopoWolf/quadtree-over-media-rs/"
keywords = ["quad", "quadtree"]
exclude = [
	"docs/"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
rayon = "1.8.0"

clap = { version = "4.4.7", features = ["derive"] }
csscolorparser = "0.6.2"
log = "0.4.20"
simplelog = "0.12.1"

[dev-dependencies]
test-case = "3.2.1"
once_cell = "1.18.0"
