[package]
edition = "2021"
name = "quadtree-over-media"
version = "2.0.0-alpha.1"
description = """
Calculate and draw quadtrees over images in various formats
"""
#documentation =
license = "Apache-2.0"
repository = "https://github.com/JacopoWolf/quadtree-over-media-rs/"
keywords = ["quad", "quadtree"]
exclude = [
	"docs/"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
csscolorparser = "0.6"
image = "0.24"
log = "0.4"
rayon = "1.8"
simplelog = "0.12"

[dev-dependencies]
once_cell = "1.18"
test-case = "3.3"
