[package]
edition = "2021"
name = "quadtree-over-media"
version = "2.0.0-alpha.2"
description = """
Calculate and draw quadtrees over images in various formats
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/JacopoWolf/quadtree-over-media-rs/"
keywords = ["quad", "quadtree"]
exclude = ["docs/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10"                                    #parallelism
clap = { version = "4.5", features = ["derive"] } #CLI arg parser

csscolorparser = "0.7"
image = { version = "0.25", default-features = false, features = [
	"rayon",
	"bmp",
	"gif",
	"hdr",
	"ico",
	"jpeg",
	"png",
	"webp",
] }

log = "0.4"
simplelog = "0.12"

[dev-dependencies]
once_cell = "1"
test-case = "3"
